--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "start:dev": "nodemon ./bin/www",
     "lint": "eslint ."
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "lodash": "^4.17.20",
+    "mongodb": "^3.6.0",
     "morgan": "~1.9.1",
     "scrape-it": "^5.2.4"
   },
@@ -19,6 +22,7 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
+    "nodemon": "^2.0.4",
     "prettier": "2.0.5"
   },
   "prettier": {
