--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-node_modules/
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+# dependencies
+/node_modules
+
+# misc
+.DS_Store
+.env*
 .idea/
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .env
+build
