--- a/package.json
+++ b/package.json
@@ -2,30 +2,75 @@
   "name": "travelbuddyserver",
   "version": "0.0.1",
   "private": true,
+  "main": "src/app.ts",
   "scripts": {
-    "start": "node ./bin/www",
-    "start:dev": "nodemon ./bin/www",
-    "lint": "eslint ."
+    "build": "tsc",
+    "start": "nodemon",
+    "inspect": "nodemon --inspect src/app.ts",
+    "test": "jest",
+    "lint": "npm run lint:js ",
+    "lint:eslint": "eslint --ignore-path .gitignore --ext .ts",
+    "lint:js": "npm run lint:eslint src/",
+    "lint:fix": "npm run lint:js -- --fix"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/josue270193/travelbuddy-server.git"
+  },
+  "keywords": [
+    "js",
+    "javascript",
+    "typescript",
+    "node",
+    "express"
+  ],
+  "author": "Josue D. Lopez",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "agenda": "^3.1.0",
+    "agendash": "^1.0.0",
+    "argon2": "^0.27.0",
+    "body-parser": "^1.19.0",
+    "celebrate": "^12.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1",
+    "errorhandler": "^1.5.1",
+    "event-dispatch": "^0.4.1",
+    "eventemitter3": "^4.0.4",
+    "express": "^4.17.1",
+    "express-basic-auth": "^1.2.0",
+    "express-jwt": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "mongodb": "^3.6.0",
-    "morgan": "~1.9.1",
-    "scrape-it": "^5.2.4"
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
+    "mongoose": "^5.10.0",
+    "morgan": "^1.10.0",
+    "reflect-metadata": "^0.1.13",
+    "typedi": "^0.8.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/agenda": "^2.0.9",
+    "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.10",
+    "@types/lodash": "^4.14.159",
+    "@types/mongoose": "^5.7.36",
+    "@types/node": "^14.6.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
     "eslint": "^7.7.0",
-    "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.4.0",
     "nodemon": "^2.0.4",
-    "prettier": "2.0.5"
+    "prettier": "^2.0.5",
+    "ts-jest": "^26.2.0",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7"
   },
-  "prettier": {
-    "singleQuote": true
-  }
+  "bugs": {
+    "url": "https://github.com/josue270193/travelbuddy-server/issues"
+  },
+  "homepage": "https://github.com/josue270193/travelbuddy-server#readme"
 }
