--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "author": "Josue D. Lopez",
   "dependencies": {
+    "@azure/ai-text-analytics": "^5.0.0",
     "agenda": "^3.1.0",
     "agendash": "^1.0.0",
     "argon2": "^0.27.0",
@@ -45,7 +46,10 @@
     "moment-timezone": "^0.5.31",
     "mongoose": "^5.10.0",
     "morgan": "^1.10.0",
+    "python-shell": "^2.0.1",
     "reflect-metadata": "^0.1.13",
+    "scrape-it": "^5.2.4",
+    "spacy-nlp": "^1.0.11",
     "typedi": "^0.8.0",
     "winston": "^3.3.3"
   },
