--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "agenda": "^3.1.0",
     "agendash": "^1.0.0",
     "argon2": "^0.27.0",
+    "async": "^3.2.0",
     "body-parser": "^1.19.0",
     "celebrate": "^12.2.0",
     "cors": "^2.8.5",
@@ -39,6 +40,7 @@
     "eventemitter3": "^4.0.4",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
+    "express-fileupload": "^1.2.0",
     "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
@@ -46,11 +48,14 @@
     "moment-timezone": "^0.5.31",
     "mongoose": "^5.10.0",
     "morgan": "^1.10.0",
+    "node-emoji": "^1.10.0",
+    "node-fetch": "^2.6.1",
     "python-shell": "^2.0.1",
     "reflect-metadata": "^0.1.13",
     "scrape-it": "^5.2.4",
     "spacy-nlp": "^1.0.11",
     "typedi": "^0.8.0",
+    "wikibase-sdk": "^7.8.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
