--- a/.env.example
+++ b/.env.example
@@ -4,14 +4,24 @@ JWT_SECRET ='p4sta.w1th-b0logn3s3-s@uce'
 
 # Mongo DB
 # Local development
-MONGODB_URI='mongodb://localhost/travelbuddy-nodejs'
+MONGODB_URI='mongodb://localhost/travelbuddy-dev'
 MONGODB_DB='travelbuddy-dev'
 AGENDA_DB_COLLECTION='agendaJobs'
 AGENDA_POOL_TIME=1 days
 AGENDA_CONCURRENCY=20
+
+# Mongoose Debug
+MONGOOSE_DEBUG=true
+
+# Admin user/password
+ADMIN_USER='admin'
+ADMIN_PASSWORD='123456'
 
 # Port
 PORT=3000
 
 # Debug
 LOG_LEVEL='debug'
+
+# Maximum of process running parallel of Python
+PYTHON_PROCESS_MAXIMUM=8
