feat: Added configuration for BD.
fix: Fixed build

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@ AGENDA_POOL_TIME=1 days
 AGENDA_CONCURRENCY=20
 
 # Mongoose Debug
-MONGOOSE_DEBUG=true
+## 0 false - 1 true
+MONGOOSE_DEBUG=0
 
 # Admin user/password
 ADMIN_USER='admin'
