fix: Fixed configuration for prod

--- a/database/collection/configurations.json
+++ b/database/collection/configurations.json
@@ -220,7 +220,7 @@
           "value": null
         },
         "value": null,
-        "extra": [gualeguaychu
+        "extra": [
           {
             "name": "P38",
             "value": "mainsnak.datavalue.value.id",
